--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -89,5 +89,10 @@
   "continueButton": "Continue",
   "@continueButton": {
     "description": "Button text to continue"
+  },
+  "pleaseAllowLocation": "Please allow location access to proceed.",
+  "@pleaseAllowLocation": {
+    "description": "Message prompting user to allow location access"
   }
+
 }
