--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -89,5 +89,9 @@
   "continueButton": "متابعة",
   "@continueButton": {
     "description": "زر المتابعة للخطوة التالية"
-  }
+  },
+    "pleaseAllowLocation": "يرجى السماح بالوصول إلى الموقع قبل المتابعة",
+    "@pleaseAllowLocation": {
+      "description": "رسالة تطلب من المستخدم السماح بالوصول إلى الموقع"
+}
 }
